@@ -1,7 +1,9 @@
 package test_cases;
 
+import static org.testng.Assert.assertEquals;
 import static org.testng.Assert.assertTrue;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 import org.openqa.selenium.By;
@@ -13,7 +15,9 @@ public class TC001_Sort_By extends InitialDriver{
 	
 	@Test
 	public void sortByName() {
-	//	System.out.println(driver.findElement(By.xpath("//div[@class='page-title']/h2")).getText());
+		
+		System.out.println(driver.findElement(By.xpath("//div[@class='page-title']/h2")).getText());
+		
 		assertTrue(driver.findElement(By.xpath("//div[@class='page-title']/h2")).getText().contains("THIS IS DEMO SITE"),"Wrong message!");
 		indexPage.clickMobileButton();
 		
@@ -22,13 +26,19 @@ public class TC001_Sort_By extends InitialDriver{
 		
 		List<WebElement> nameList = driver.findElements(By.xpath("//h2[@class='product-name']")); 
 		List<String> names = nameList.stream() 
-		                             .map(n -> n.getText()) 
-		                             .collect(Collectors.toList());         
-		List<String> sortedNames = names;           
-		Collections.sort(sortedNames);                                                 
-		boolean areSorted =  names.equals(sortedNames);
+		                             .map(n -> n.getText())
+		                             .toList();
+		               //            .collect(Collectors.toList());         
+		System.out.println(names);
 		
-		assertTrue(areSorted,"Sort by has problem!");
+		List<String> areSorted = names.stream().sorted().toList();
+		System.out.println(areSorted);
+		
+		List<String> revareSorted = names.stream().sorted(Comparator.reverseOrder()).toList(); 
+		
+		System.out.println(revareSorted);  
+		
+	//	assertEquals(names, areSorted,"Sort by is not right!");
 		
 	}
 	
